--- a/alo_app/uis/home.ui
+++ b/alo_app/uis/home.ui
@@ -28,7 +28,7 @@
      <x>0</x>
      <y>80</y>
      <width>211</width>
-     <height>401</height>
+     <height>371</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -92,7 +92,10 @@
       <string notr="true">border: 0px; border-radius: 0px;</string>
      </property>
      <property name="text">
-      <string>Enter for searching ...</string>
+      <string/>
+     </property>
+     <property name="placeholderText">
+      <string>Enter for searching</string>
      </property>
     </widget>
     <widget class="QPushButton" name="btnSearch">
@@ -136,37 +139,48 @@
       <normaloff>../asset/icon/add_group.svg</normaloff>../asset/icon/add_group.svg</iconset>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnAddFriend">
+   <widget class="QLabel" name="imgAvatar">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>10</x>
       <y>10</y>
       <width>31</width>
       <height>31</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">border-radius: 5px; background-color: rgb(240, 240, 240);</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../asset/icon/add_friend.svg</normaloff>../asset/icon/add_friend.svg</iconset>
-    </property>
-   </widget>
-   <widget class="QLabel" name="imgAvatar">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>5</y>
-      <width>41</width>
-      <height>41</height>
-     </rect>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="text">
      <string>AVT</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblDisplayName">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>20</y>
+      <width>111</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: none</string>
+    </property>
+    <property name="text">
+     <string>Name</string>
     </property>
    </widget>
   </widget>
@@ -251,6 +265,15 @@
       <height>20</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: none</string>
+    </property>
     <property name="text">
      <string>Name</string>
     </property>
@@ -264,8 +287,17 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
     <property name="text">
      <string>AVT</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QPushButton" name="btnAddGroup1">
@@ -299,7 +331,7 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background: rgb(200, 220, 200); border: 2px solid rgb(210, 210, 210)</string>
+    <string notr="true">background: rgb(200, 220, 200); border: 2px solid rgb(210, 210, 210);</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::Box</enum>
@@ -313,89 +345,12 @@
    <property name="verticalScrollBarPolicy">
     <enum>Qt::ScrollBarAlwaysOn</enum>
    </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
    <property name="verticalScrollMode">
     <enum>QAbstractItemView::ScrollPerItem</enum>
    </property>
-  </widget>
-  <widget class="QWidget" name="chatMsgWidget" native="true">
-   <property name="geometry">
-    <rect>
-     <x>220</x>
-     <y>50</y>
-     <width>491</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="autoFillBackground">
-    <bool>false</bool>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0,0,0,0)</string>
-   </property>
-   <widget class="QLabel" name="imgAvatar3">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>31</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border: 1px solid rgb(210, 210, 210); background-color: white</string>
-    </property>
-    <property name="text">
-     <string>AVT</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="txtYourMsg_2">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>0</y>
-      <width>391</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: white; border: none;border-radius: 10px; padding: 5px;</string>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QWidget" name="yourChatMsgWidget" native="true">
-   <property name="geometry">
-    <rect>
-     <x>220</x>
-     <y>90</y>
-     <width>491</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="autoFillBackground">
-    <bool>false</bool>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0,0,0,0)</string>
-   </property>
-   <widget class="QLabel" name="txtYourMsg">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>0</y>
-      <width>391</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(0, 160, 180); border: none;border-radius: 10px; padding: 5px; color: white</string>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
   </widget>
   <widget class="QWidget" name="bottomWidget" native="true">
    <property name="geometry">
@@ -462,46 +417,43 @@
      <string notr="true">border: none; border-bottom: 1px solid rgb(230, 230, 230);</string>
     </property>
     <property name="text">
+     <string/>
+    </property>
+    <property name="placeholderText">
      <string>Enter message ...</string>
     </property>
    </widget>
   </widget>
-  <widget class="QWidget" name="chatItemWidget" native="true">
+  <widget class="QWidget" name="toolsWidget" native="true">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>90</y>
-     <width>171</width>
+     <x>0</x>
+     <y>450</y>
+     <width>211</width>
      <height>31</height>
     </rect>
    </property>
-   <widget class="QLabel" name="imgAvatar2">
+   <property name="styleSheet">
+    <string notr="true">border: 1px solid rgb(210, 210, 210); </string>
+   </property>
+   <widget class="QPushButton" name="btnLogout">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>31</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border: 1px solid rgb(210, 210, 210);</string>
-    </property>
-    <property name="text">
-     <string>AVT</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lblChatName2">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
+      <x>10</x>
       <y>5</y>
-      <width>131</width>
+      <width>41</width>
       <height>21</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 5px; background-color: rgb(240, 240, 240);</string>
+    </property>
     <property name="text">
-     <string>Name</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../asset/icon/logout.svg</normaloff>../asset/icon/logout.svg</iconset>
     </property>
    </widget>
   </widget>
